--- a/src/test/resources/file.properties
+++ b/src/test/resources/file.properties
@@ -1,4 +1,4 @@
-EnterMessage : Show Message!
-EnterYour_Name : Phil
-EnterSubject : Modern Family
-EnterDescription : Is a English sitcom.
+Enter_Message : Show Message!
+Enter_Your_Name : Phil
+Enter_Subject : Modern Family
+Enter_Description : Is a English sitcom.
